--- a/api/package.json
+++ b/api/package.json
@@ -10,10 +10,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/passport": "^1.0.16",
+    "@types/passport-http": "^0.3.11",
+    "argon2": "^0.40.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "mongoose-uuid-ts": "^1.0.4",
+    "passport": "^0.7.0",
+    "passport-http": "^0.3.0",
+    "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
