--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "description": "A web application, including a server with REST-style APIs and a SPA front-end, that allows students to buy and sell used university textbooks by creating and bidding on auctions.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "api": "npx ts-node api/src/main.ts"
   },
   "author": "",
   "workspaces": [
-      "angular",
-      "api"
+    "angular",
+    "api"
   ],
-  "license": "AGPL-3.0"
+  "license": "AGPL-3.0",
+  "dependencies": {
+    "@types/passport-jwt": "^4.0.1",
+    "dotenv": "^16.4.5",
+    "express-jwt": "^8.4.1"
+  }
 }
