--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "argon2": "^0.40.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
     "mongoose-uuid-ts": "^1.0.4",
