--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "A web application, including a server with REST-style APIs and a SPA front-end, that allows students to buy and sell used university textbooks by creating and bidding on auctions.",
   "scripts": {
-    "api": "npx ts-node api/src/main.ts"
+    "api": "npx nodemon api/src/main.ts"
   },
   "author": "",
   "workspaces": [
@@ -15,5 +15,9 @@
     "@types/passport-jwt": "^4.0.1",
     "dotenv": "^16.4.5",
     "express-jwt": "^8.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2"
   }
 }
