--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@types/passport-jwt": "^4.0.1",
     "dotenv": "^16.4.5",
-    "express-jwt": "^8.4.1"
+    "express-jwt": "^8.4.1",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
