--- a/api/package.json
+++ b/api/package.json
@@ -4,15 +4,14 @@
   "description": "",
   "main": "src/main.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx nodemon api/src/main.ts",
+    "container": "npx nodemon src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/passport": "^1.0.16",
-    "@types/passport-http": "^0.3.11",
     "argon2": "^0.40.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -24,9 +23,16 @@
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "socket.io": "^4.3.2",
+    "express-jwt": "^8.4.1"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/passport": "^1.0.16",
+    "@types/passport-http": "^0.3.11",
+    "@types/passport-jwt": "^3.0.7",
+    "@types/uuid": "^8.3.0",
     "@types/express": "^4.17.21",
     "@types/node": "^20.12.11",
     "typescript": "^5.4.5"
