--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "argon2": "^0.40.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-jwt": "^8.4.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.4",
@@ -22,19 +23,18 @@
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0",
-    "socket.io": "^4.3.2",
-    "express-jwt": "^8.4.1"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.12.11",
     "@types/passport": "^1.0.16",
     "@types/passport-http": "^0.3.11",
-    "@types/passport-jwt": "^3.0.7",
+    "@types/passport-jwt": "^3.0.13",
     "@types/uuid": "^8.3.0",
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.12.11",
     "typescript": "^5.4.5"
   }
 }
