--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -3,7 +3,7 @@
     "rootDir": "./src",
     "outDir": "./dist",
     "esModuleInterop": true,
-    "target": "es2016",
+    "target": "ES2018",
     "module": "commonjs",
     "strict": true,
     "skipLibCheck": true
