--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,9 @@
     "passport-jwt": "^4.0.1",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0"
+    "winston": "^3.13.0",
+    "node-cron": "^3.0.3",
+    "moment": "^2.29.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
