--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   ],
   "license": "AGPL-3.0",
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
+    "node-cron": "^3.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.3",
