Update .gitignore with seed-data symbolic kink

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,6 @@ mongo-init.js
 # files which are not compatible with our license
 api/seed-data/books/covers/*
 !api/seed-data/books/covers/.placeholder
+
+# Symbolic links
+seed-data
