--- a/api/package.json
+++ b/api/package.json
@@ -18,16 +18,16 @@
     "express-jwt": "^8.4.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.29.1",
     "mongoose": "^8.3.4",
     "mongoose-uuid-ts": "^1.0.4",
+    "node-cron": "^3.0.3",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
     "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
-    "winston": "^3.13.0",
-    "node-cron": "^3.0.3",
-    "moment": "^2.29.1"
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
