--- a/api/package.json
+++ b/api/package.json
@@ -18,7 +18,7 @@
     "express-jwt": "^8.4.1",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
-    "moment": "^2.29.1",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.4",
     "mongoose-uuid-ts": "^1.0.4",
     "node-cron": "^3.0.3",
@@ -37,6 +37,8 @@
     "@types/passport-http": "^0.3.11",
     "@types/passport-jwt": "^3.0.13",
     "@types/uuid": "^8.3.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "nodemon": "^3.1.3",
+    "ts-node": "^10.9.2"
   }
 }
