--- a/angular/package.json
+++ b/angular/package.json
@@ -21,7 +21,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "http": "^0.0.1-security",
-    "ngx-socket-io": "^4.5.1",
+    "ngx-socket-io": "4.5.1",
     "ngx-webstorage-service": "^5.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
